<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.wilddog.samples.logindemo.WeiboOAuthActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/login_status"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/weibosdk_demo_step_to_obtain_code" />

    <Button
        android:id="@+id/mCodeButton"
        android:text="@string/weibosdk_demo_step_to_obtain_token"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" />

    <Button
        android:id="@+id/mWilddogButton"
        android:text="@string/weibosdk_demo_step_to_obtain_wilddog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weibosdk_demo_code_text_hint"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/code_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weibosdk_demo_token_text_hint"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/token_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/weibosdk_demo_wilddog_text_hint"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wilddog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

</LinearLayout>
